--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,17 @@
   border-radius: 20px;
   box-shadow: 1px 0px 2px 1px rgb(0 0 0 / 20%);
 }
+.PaperStyle {
+  width: "100%";
+
+  min-height: "100vh";
+  max-width: 1000;
+  margin: "auto";
+}
+.typographyHeader {
+  font-family: "monospace";
+  font-weight: 700;
+  letter-spacing: ".3rem";
+  color: "black";
+  text-decoration: "none";
+}
